force-app/main/default/objects/Candidate__c/Candidate__c.object-meta.xml
<CustomObject>
    <label>Candidate</label>
    <pluralLabel>Candidates</pluralLabel>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tracks job applicants throughout the recruitment pipeline, including their profile, application status, and hiring progress.</description>
</CustomObject>