force-app/main/default/objects/Candidate__c/fields/Current_CTC__c.field-meta.xml
<CustomField>
    <fullName>Current_CTC__c</fullName>
    <label>Current CTC (LPA)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>