force-app/main/default/objects/Candidate__c/fields/Expected_CTC__c.field-meta.xml
<CustomField>
    <fullName>Expected_CTC__c</fullName>
    <label>Expected CTC (LPA)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>