force-app/main/default/objects/Candidate__c/recordTypes/Experienced.recordType-meta.xml
<RecordType>
    <fullName>Experienced</fullName>
    <active>true</active>
    <label>Experienced</label>
    <description>Candidates with 2 or more years of experience. Full field visibility including Current CTC.</description>
</RecordType>