force-app/main/default/objects/Candidate__c/recordTypes/Fresher.recordType-meta.xml
<RecordType>
    <fullName>Fresher</fullName>
    <active>true</active>
    <label>Fresher</label>
    <description>Candidates with less than 2 years of experience. Hides Current CTC field on layout.</description>
</RecordType>