force-app/main/default/objects/Candidate__c/validationRules/Experience_Min_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Experience_Min_Value</fullName>
    <active>true</active>
    <description>Ensures Years of Experience cannot be negative</description>
    <errorConditionFormula>Experience__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Experience__c</errorDisplayField>
    <errorMessage>Years of Experience must be 0 or greater.</errorMessage>
</ValidationRule>